--- a/BasicHTML.html
+++ b/BasicHTML.html
@@ -4,5 +4,6 @@
         <h4>Basic HTML Template</h4>
         <p>Introduction to basic HTML syntax.</p>
         <p>Added another paragraph.</p>
+        <p>New para</p>
     </header>
 </html>
