--- a/One-page-Website/One-page-project.html
+++ b/One-page-Website/One-page-project.html
@@ -4,6 +4,7 @@
         <title>Games!</title>
         <meta charset="UTF-8">
         <meta name="description" content="Webpage about games!">
+        <link rel="stylesheet" href="one_page_website.css" >
     </head>
     <body>
     <!--Subjects=shooters,rpg,survival-->
@@ -53,6 +54,7 @@
             <div>
                 <form>
                     <input type="text" placeholder="Game Catagory">
+                    <input type="submit" value="submit">
                 </form>
             </div>
         </div>
